# intel-acceleration

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  ThirdPartyNotices.txt
.github/workflows/: build-runtime.yml  build-toolchain.yml  delete-temporary-artifacts.yml
conversion-toolchain/: README.md  build-toolchain.sh
runtime-library/: CMakeLists.txt  README.md  build-runtime.sh  build-runtimes.sh
runtime-library/src/: runtime_core.c  runtime_core.cpp
scripts/: setup-env.sh
